k8s/production/patches/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebro-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 4Gi
