k8s/production/patches/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebro-worker
spec:
  template:
    spec:
      containers:
        - name: worker
          command:
            - celery
            - -A
            - cerebro.tasks.celery_app
            - worker
            - -l
            - info
            - --concurrency=8
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 4000m
              memory: 8Gi
